# voter-data-tools

./: README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vote.py
.github/workflows/: test.yml
scripts/: test.sh
vlib/: __init__.py  ga.py  test_tool.py
