[project]
description = "A command line tool, and library, for working with voter registration data in the United States."
name = "voter-data-tools"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Dave Peck", email = "dave@frontseat.org" }]
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]

[tool.pyright]
include = ["vote.py", "vlib/**/*.py"]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true

[tool.ruff]
exclude = [".venv"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["D101", "D102"]

[tool.ruff.lint]
extend-select = [
  "E", # style errors
  "D", # pydocstyle
  "C", # flake8-comprehensions
  "B", # flake8-bugbear
]
extend-ignore = [
  "D100", # Allow missing docstring in public module
  "D104", # Allow missing docstring in public package
  "D203", # Instead, use D211 (zero blank lines before class docstring)
  "D212", # Instead, use D213 (start multi-line summaries on the second line)
  "D413", # Allow missing blank line after last section of docstring (who cares?)
]

[project.urls]
Homepage = "https://github.com/front-seat/voter-data-tools"
Changelog = "https://github.com/front-seat/voter-data-tools/releases"
Issues = "https://github.com/front-seat/voter-data-tools/issues"
CI = "https://github.com/front-seat/voter-data-tools/actions"
